src/test/testData/inspections/typeConstructor.elambda
data S1() = S(<error descr="Type 'S2' undefined">S2</error>());
